--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "web-server",
+  "engines": {
+    "node":"16.14.2",
+    "npm":""
+  },
   "version": "1.0.0",
-  "description": "",
+  "description": "8.5.0",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
